# gensoquote

./: Cargo.toml  LICENSE.md  README.md  generate_enum.py  generate_lib.py  generate_quotes.py
data/: artbooks.txt  characters.txt  games.txt  quotes.txt
src/: artbooks.rs  characters.rs  format.rs  games.rs  main.rs  quote.rs  quotes.rs  quotes_tests.rs  source.rs  to_str.rs
