[package]
name = "gensoquote"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "thin"
# lto = "fat"
opt-level = 3
#opt-level = "z"
panic = "abort"
strip = true
#target-cpu = "native" -> RUSTFLAGS='-C target-cpu=native'

[dependencies]
rand = "0.8.5"
