[package]
name = "gensoquote"
version = "0.4.1"
edition = "2021"
authors = ["dmyTRUEk"]
description = "Like fortune, but in Gensokyo and memory safe."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dmyTRUEk/gensoquote"
repository = "https://github.com/dmyTRUEk/gensoquote"
keywords = ["cli", "terminal", "touhou", "touhou-project", "fortune", "game"]
categories = ["command-line-utilities"]
include = [
	"src/*.rs",
	"Cargo.lock",
	"Cargo.toml",
	"rust-toolchain",
	"README.md",
	"LICENSE.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = "thin"
# lto = "fat"
opt-level = 3
#opt-level = "z"
panic = "abort"
strip = true
#target-cpu = "native" -> RUSTFLAGS='-C target-cpu=native'

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
rand = "0.8.5"
